Revert "Merge branch 'update-repo-upstream' into main"
This reverts commit 60744f46f3e276b5c68da7d90bcfea80e814c5a7, reversing
changes made to 81953024eef61532a06cee8e343a1b570131a55d.

Update repo upstream with branch

--- a/blocks/engine-specifications/engine-specifications.css
+++ b/blocks/engine-specifications/engine-specifications.css
@@ -423,8 +423,9 @@ main .section .engine-specifications-wrapper {
   font-size: var(--f-body-font-size);
 }
 
-.redesign-v2 .performance .engine-rating .rating-item a,
-.redesign-v2 .performance .engine-rating .rating-item a:visited {
+/* stylelint-disable-next-line no-descending-specificity */
+.redesign-v2 .performance a,
+.redesign-v2 .performance a:visited {
   text-decoration: none;
   cursor: pointer;
   padding-bottom: 12px;
